# g-up

./: Cargo.toml  generated-sources.json  io.github.nichokas.g_up.json  meson.build  org.nichokas.gup.json  readme.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  deb.yml  flathub.yml  flatpak.yml
src/: main.rs
