[package]
name = "g-up"
version = "1.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dirs = "4.0"

[package.metadata.deb]
maintainer = "Nicolas Rodriguez <nichokas@proton.me>"
copyright = "2024, Nicolas Rodriguez <nichokas@proton.me>"
license-file = "./LICENSE"
extended-description = """A simple utility to upload files to Google Drive using the Google Drive API."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [["target/release/g-up", "usr/bin/", "755"]]
